--- a/01_starter/index.html
+++ b/01_starter/index.html
@@ -31,6 +31,8 @@
     <div>Hello world!</div>
     <div>
       Hello world!</div>
+    </div>  
+      Hello world!</div>
 
   <!-- 브라우저에 출력하기(Extensions -> live server 설치)  -->
   <!-- 우클릭 후 Open with Live Server 또는 단축키 alt + l + o -->
@@ -42,16 +44,19 @@
 </html>
 
 <!-- (Git 배우고 복사해 갈 것!) -->
- <!-- VS Code 단축키 정리 
-   1) 사이드 바 열고 닫기: ctrl + b
-   2) 빠른 열기(파일이나 기호 검색): ctrl + p
-   3) 모든 명령 표시(명령 팔레트): ctrl + shift + p 또는 F1
-   4) 탭 닫기: ctrl + w, 모든 탭 닫기: ctrl + k + w
-   5) 검색: ctrl + f, 프로젝트 전체 검색: ctrl + shift + f
-   6) 바꾸기: ctrl + h
-   7) 라인 이동: alt + up/down
-   8) 라인 복사: ctrl + c 또는 alt + shift + up/down
-   9) 들여쓰기: tap, 내어쓰기: shift + tab
-   10) 이전/다음 탭 열기: ctrl + pgUp/pgDn 또는 ctrl + tab
-   11) 편집기 분할: ctrl + 
- -->
+<!-- VS Code 단축키 정리
+  1) 사이드 바 열고 닫기: ctrl + b
+  2) 빠른 열기(파일이나 기호 검색): ctrl + p
+  3) 모든 명령 표시(명령 팔레트): ctrl + shift + p 또는 F1
+  4) 탭 닫기: ctrl + w, 모든 탭 닫기: ctrl + k + w
+  5) 검색: ctrl + f, 프로젝트 전체 검색: ctrl + shift + f
+  6) 바꾸기: ctrl + h
+  7) 라인 이동: alt + up/down
+  8) 라인 복사: ctrl + c 또는 alt + shift + up/down
+  9) 들여쓰기: tab, 내어쓰기: shift + tab
+  10) 이전/다음 탭 열기: ctrl + PgUp/PgDn 또는 ctrl + tab
+  11) 편집기 분할: ctrl + \ 또는 ctrl + alt + left/right
+  12) 다중 선택: ctrl + d 또는 ctrl + alt + up/down 또는 alt + 마우스 클릭/드래그
+  13) 라인 삭제: ctrl + shift + k
+  14) 주석: ctrl + / 
+-->
