--- a/05_CSS/13_font.html
+++ b/05_CSS/13_font.html
@@ -36,7 +36,7 @@
     .fw-900{ font-weight: 900;}
     /* 폰트가 해당 두께를 지원해야만 적용됨, 지원하지 않을 경우 가장 가까운 값이 적용 */
 
-    .fs-large{  font-size: large; }
+    .fs-large{ font-size: large;}
     .fs-150p{ font-size: 150; }
     /* 일반적으로 폰트 크기는 단위(px, em, rem)로 직접 지정 */
 
@@ -85,20 +85,25 @@
     이것은 비율 줄 높이를 갖는 문단입니다.<br>
     여기서 줄 높이는 200%로 설정됩니다.
   </div>
+  <!-- Tip! line-height를 이용해서 손쉽게 수직정렬 할수있다 -->
+   <h2>글자 요소(인라인 요소)의 수직 정렬</h2>
+   <div style="height: 80px; background-color: orange; line-height: 80px;">
+    <span style="background-color: beige;">이것은 문장입니다.</span>
+   </div>
 
 </body>
 </html>
 
 <!-- (정리) Quiz
   Q1: 글자 기울기를 지정할 때 사용하는 속성과 값은?
-  A1: font-style:
+  A1: font-style: italic;
 
   Q2: 글자를 두껍게 지정할 때 사용하는 속성과 값은?
-  A2: font-weight:
+  A2: font-weight: bold; 또는 font-weight: 700;
 
   Q3: 고딕체 계열을 의미하는 속성 값은?
-  A3: font-famil:sens-serif;
+  A3: font-family:sans-serif;
 
   Q4: line-height 속성을 사용할 때 권장하는 단위는?
-  A4: line-height = 2;
+  A4: 숫자(배수), 예) line-height = 1.4;
 -->
