--- a/05_CSS/19_z-index.html
+++ b/05_CSS/19_z-index.html
@@ -91,10 +91,10 @@
 
    <!-- (정리) Quiz
   Q1: position 속성의 기본값은?
-  A1: static
+  A1: static (위치 기준 없음)
 
   Q2: 상위 요소 중 위치 기준이 존재하는 가장 가까운 요소를(위치상 부모 요소)를 기준으로 배치하는 position 속성의 값은?
-  A2: position:relative
+  A2: absolute
 
   Q3: 뷰포트를 기준으로 배치하는 position 속성의 값은?
   A3: fixed
