--- a/05_CSS/23_transition.html
+++ b/05_CSS/23_transition.html
@@ -75,3 +75,11 @@
 
 </body>
 </html>
+
+<!-- (정리) Quiz
+  Q1: transition-property 속성의 기본값은?
+  A1: all
+
+  Q2: transition 단축 속성의 필수 포함 속성은?
+  A2: transition-duration (지속 시간)
+-->
