3주차월요일 오전수업

--- a/08_portfolio-site/index.html
+++ b/08_portfolio-site/index.html
@@ -27,6 +27,8 @@
   <!-- main.css -->
   <link rel="stylesheet" href="css/main.css">
 
+  <!-- ScrollMagic -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.8/ScrollMagic.min.js" integrity="sha512-8E3KZoPoZCD+1dgfqhPbejQBnQfBXe8FuwL4z/c8sTrgeDMFEnoyTlH3obB4/fV+6Sg0a0XF+L/6xS4Xx1fUEg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
   <!-- main.js -->
   <script defer src="js/main.js"></script>
 </head>
@@ -48,16 +50,16 @@
       <nav class="font-en">
         <ul>
           <li>
-            <a href="#">ABOUT</a>
+            <a href="#about">ABOUT</a>
           </li>
           <li>
-            <a href="#">SKILL</a>
+            <a href="#skill">SKILL</a>
           </li>
           <li>
-            <a href="#">PROJECT</a>
+            <a href="#project">PROJECT</a>
           </li>
           <li>
-            <a href="#">CONTACT</a>
+            <a href="#contact">CONTACT</a>
           </li>
         </ul>
       </nav>
@@ -107,6 +109,102 @@
           <span class="animate-flash" style="animation-delay: 0.13s;">.</span>
       </h1>
     </div>
-   </section>
+  </section>
+
+  <!-- ABOUT -->
+  <section id="about" class="about">
+    <div class="inner">
+      <h2 class="title font-en">ABOUT</h2>
+      <div class="about__wrapper">
+        <div class="about__img">
+          <!-- 본인 프로필 이미지 넣기 -->
+          <img src="images/logo copy.png" alt="프로필">
+        </div>
+        <div class="about__text">
+          <!-- 본인 슬로건, 이름(생년월일), 학력 또는 교육 사항 등 작성 -->
+          <strong class="slogan font-en">Simple is Best</strong>
+          <h3 class="font-en">Baek Jun Su (1999.07.16)</h3>
+          <div>
+            <h4 class="font-en">Student</h4>
+            <ul>
+              <li>10.03 ~ 12.02 OO학교 OO과 졸업</li>
+              <li>25.04 ~ 25.10 클라우드(AWS)활용 자바/스프링 개발 부트캠프 수료</li>
+            </ul>
+          </div>
+        </div>
+      </div>
+      <!-- 연락처 버튼 -->
+      <div class="about__btn font-en">
+        <a href="#contact">
+          <img src="images/icon/icon_contact.png" alt="연락처">CONTACT
+        </a>
+      </div>
+    </div>
+  </section>
+
+  <!-- SKILL -->
+  <section id="skill" class="skill scroll-spy">
+    <div class="inner">
+      <h2 class="title font-en">SKILL</h2>
+      <ul class="skill__list">
+        <!-- 스킬 추가하려면 li 요소 복사 붙여넣기 -->
+        <li>
+          <div class="font-en">
+            <p>Java</p>
+          </div>
+          <h3 class="font-en">Java<br>Programing</h3>
+          <ul>
+            <li>객체지향</li>
+            <li>파일 입출력</li>
+            <li>JDBC</li>
+          </ul>
+        </li>
+        <li>
+          <div class="font-en">
+            <p>Html</p>
+          </div>
+          <h3 class="font-en">HTML5</h3>
+          <ul>
+            <li>웹페이지 구조 설계</li>
+            <li>시맨틱 태그</li>
+          </ul>
+        </li>
+        <li>
+          <div class="font-en">
+            <p>Css</p>
+          </div>
+          <h3 class="font-en">CSS3</h3>
+          <ul>
+            <li>웹페이지 레이아웃 설계</li>
+            <li>웹페이지 디자인</li>
+            <li>반응형 제작</li>
+          </ul>
+        </li>
+        <li>
+          <div class="font-en">
+            <p>Js</p>
+          </div>
+          <h3 class="font-en">JavaScript</h3>
+          <ul>
+            <li>DOM 조작, 제어</li>
+            <li>이벤트 처리</li>
+            <li>비동기 통신</li>
+          </ul>
+        </li>
+        <li>
+          <div class="font-en">
+            <p>React</p>
+          </div>
+          <h3 class="font-en">React JS</h3>
+          <ul>
+            <li>SPA 개발</li>
+            <li>전역 상태 관리</li>
+            <li>클라이언트 라우팅</li>
+            <li>CSR 방식 앱개발</li>
+          </ul>
+        </li>
+      </ul>
+    </div>
+  </section>
 </body>
 </html>
