--- a/08-1_portfolio-site/index.html
+++ b/08-1_portfolio-site/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html lang="ko">
-<head>
+<div class="background">
+  <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>백준수 포트폴리오</title>
   <!-- 파비콘 -->
-  <link rel="icon" href="images/icons8-별-100.png">
+  <link rel="icon" href="images/favicon (1).ico">
   <!-- reset.css -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/reset-css@5.0.2/reset.min.css">
   <!-- 폰트 -->
@@ -15,8 +16,15 @@
   <!-- 구글 머티리얼 아이콘 연결 -->
   <!-- 구글에서 제공하는 아이콘, 글자처럼 취급 가능한 장점 -->
   <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet" />
+  <!-- 애니메이트 -->
+  <link
+  rel="stylesheet"
+  href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+/>
   <!-- main.css -->
   <link rel="stylesheet" href="css/main.css">
+  <!-- ScrollMagic -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.8/ScrollMagic.min.js" integrity="sha512-8E3KZoPoZCD+1dgfqhPbejQBnQfBXe8FuwL4z/c8sTrgeDMFEnoyTlH3obB4/fV+6Sg0a0XF+L/6xS4Xx1fUEg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
   <!-- main.js -->
   <script defer src="js/main.js"></script>
 
@@ -25,8 +33,8 @@
   <header>
     <div class="inner">
       <!-- 로고 -->
-      <a href="images/apple-touch-icon.png" class="logo">
-        <img src="images/apple-touch-icon.png" alt="">
+      <a href="images/apple-touch-icon (1).png" class="logo">
+        <img src="images/apple-touch-icon (1).png" alt="">
       </a>
       <!-- 메뉴 -->
       <nav class="special-gothic-expanded-one-regular">
@@ -49,15 +57,38 @@
     
   </header>
   <!-- 본문 -->
-   <section class="visual">
+  <section class="visual">
     <div class="inner">
       <h1 class="black-han-sans-regular">
         안녕하세요
-      </h1>&nbsp;
-      <span class="whiteblue">신입개발자</span>&nbsp;<br>
-      <span class="">백준수</span>
-      <span>입니다.</span>
+      </h1>
+      <span class="black-han-sans-regular" ><p id="green">신입</p>개발자</span>
+      <span class="black-han-sans-regular">백준수</span>
+      <span class="black-han-sans-regular">입니다.</span>
     </div>
-   </section>
+  </section>
+  <section id="about" class="about">
+    <div class="inner">
+      <h2 class="black-han-sans-regular">ABOUT</h2>
+      <div class="about__wrapper">
+        <div class="about__img">
+          <img src="images/P20240612_141310000_09690643-2FA8-47AD-8B52-DA2CF37A0E7F.JPG" alt="프로필">
+        </div>
+        <div class="about__text">
+          <strong class="slogun black-han-sans-regular">Never Give up</strong>
+          <h3 class="font-en">Baek Jun Su (1999.07.16)</h3>
+          <div>
+            <h4 class="font-en">Student</h4>
+            <ul>
+              <li>10.03 ~ 12.02 OO학교 OO과 졸업</li>
+              <li>25.04 ~ 25.10 클라우드(AWS)활용 자바/스프링 개발 부트캠프 수료
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+</div>
 </body>
 </html>
