--- a/08_portfolio-site/index.html
+++ b/08_portfolio-site/index.html
@@ -24,11 +24,19 @@
   <!-- 구글에서 제공하는 아이콘, 글자처럼 취급 가능한 장점 -->
   <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet" />
 
+  <!-- Swiper CSS -->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"/>
+  
+
   <!-- main.css -->
   <link rel="stylesheet" href="css/main.css">
 
   <!-- ScrollMagic -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.8/ScrollMagic.min.js" integrity="sha512-8E3KZoPoZCD+1dgfqhPbejQBnQfBXe8FuwL4z/c8sTrgeDMFEnoyTlH3obB4/fV+6Sg0a0XF+L/6xS4Xx1fUEg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+
+  <!-- Swiper JS -->
+  <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
+
   <!-- main.js -->
   <script defer src="js/main.js"></script>
 </head>
@@ -204,6 +212,47 @@
           </ul>
         </li>
       </ul>
+    </div>
+  </section>
+
+  <!-- PROJECT -->
+  <section id="project" class="project font-en">
+    <div class="inner">
+      <h2 class="title">PROJECT</h2>
+      <div class="port">
+        <div class="port__img">
+          <div class="swiper">
+          <div class="swiper-wrapper">
+          <div class="swiper-slide">
+            <img src="images/work_1.jpg" alt="산출물1">
+          </div>
+          <div class="swiper-slide">
+            <img src="images/work_2.jpg" alt="산출물2">
+          </div>
+          <div class="swiper-slide">
+            <img src="images/work_3.jpg" alt="산출물3">
+          </div>
+        </div>
+          <div class="swiper-pagination"></div>
+
+          <div class="swiper-button-prev"></div>
+          <div class="swiper-button-next"></div>
+          </div>
+        </div>
+        <div class="port__text">
+          <h3>프로젝트명</h3>
+          <ul>
+            <li><span>주요 기능 : </span>주요 기능 설명</li>
+            <li><span>적용 기술 : </span>HTML, CSS, JS, React, Java, Spring Boot</li>
+            <li><span>GitHub : </span>깃허브 주소</li>
+            <li><span>URL : </span>배포 주소</li>
+          </ul>
+          <div class="btn-group">
+            <a href="javascript:void(0)" class="btn">README</a>
+            <a href="javascript:void(0)" class="btn btn--brown">모달</a>
+          </div>
+        </div>
+      </div>
     </div>
   </section>
 </body>
