--- a/08-1_portfolio-site/index.html
+++ b/08-1_portfolio-site/index.html
@@ -68,6 +68,7 @@
       
     </div>
   </section>
+  <!-- ABOUT -->
   <section id="about" class="about">
     <div class="inner">
       <h2 class="title black-han-sans-regular">ABOUT</h2>
@@ -76,14 +77,16 @@
           <img src="images/66b3e291-6651-4c4d-8bf7-13ab5bb02602.png" alt="프로필">
         </div>
         <div class="about__text">
-          <strong class="slogun font-en">중요한건 꺾이지 않는 마음</strong>
+          <strong class="slogun black-han-sans-regular">SLOGUN</strong>
+          <h2 class="slogun font-en">중요한건 꺾이지 않는 마음</h2>
           <h3 class="font-en">Baek Jun Su (1999.07.16)</h3>
           <div>
             <h4 class="font-en">Student</h4>
             <ul>
-              <li>취미: 배드민턴,헬스장,넷플릭스</li>
+              
+              <li>취미: 배드민턴,헬스장,넷플릭스,유튜브 시청</li>
               <li>24.03 ~ 26.03 한국방송통신대학교 컴퓨터과학과 졸업예정</li>
-              <li>25.04 ~ 25.10 클라우드(AWS)활용 자바/스프링 개발 부트캠프 수료
+              <li>25.04 ~ 25.10 클라우드(AWS)활용 자바/스프링 개발 부트캠프 수료예정
               </li>
             </ul>
           </div>
@@ -91,16 +94,103 @@
       </div>
     </div>
   </section>
+  <!-- SKILL -->
   <section id="skill" class="skill scroll-spy">
     <div class="inner">
       <h2 class="title black-han-sans-regular">Leaning SKILL</h2>
       <ul class="skill_list">
-        <li><img src="images/html.jpg" alt="html"></li>
-        <li><img src="images/css.png" alt="css"></li>
-        <li><img src="images/JS.png" alt="js"></li>
+        <li>
+          <img src="images/html-removebg-preview.png" alt="html">
+          <h3 class="black-han-sans-regular">HTML</h3>
+          <ul class="skillfont">
+            <li>웹페이지 구조 설계</li>
+            <li>시맨틱 태그</li>
+          </ul>
+        </li>
+        <li>
+          <img src="images/css-removebg-preview.png" alt="css">
+          <h3 class="black-han-sans-regular">CSS</h3>
+          <ul class="skillfont">
+            <li>웹페이지 레이아웃 설계</li>
+            <li>웹페이지 디자인</li>
+            <li>반응형 제작</li>
+          </ul>
+        </li>
+        <li>
+          <img src="images/JS.png" alt="js">
+          <h3 class="black-han-sans-regular">JavaScript</h3>
+          <ul class="skillfont">
+            <li>DOM 조작, 제어</li>
+            <li>이벤트 처리</li>
+            <li>비동기 통신</li>
+          </ul>
+        </li>
+        <li>
+          <img src="images/Java-removebg-preview.png" alt="java">
+          <h3 class="black-han-sans-regular">JAVA</h3>
+          <ul class="skillfont">
+            <li>객체지향</li>
+            <li>파일 입출력</li>
+            <li>JDBC</li>
+          </ul>
+        </li>
       </ul>
     </div>
   </section>
+  <!-- PROJECT -->
+  <section id="project" class="project">
+    <div class="inner">
+      <h2 class="title black-han-sans-regular">PROJECT</h2>
+      <div class="overwatch">
+        <img class="scroll-spy" src="images/overwatch.jpg" alt="오버워치">
+        <span class="black-han-sans-regular scroll-spy">css를 이용한 오버워치 캐릭터 선택창 만들기</span>
+        <img class="scroll-spy" src="images/overwatchcss.jpg" alt="오버워치code">
+      </div>
+      <div class="login">
+        <img class="scroll-spy" src="images/loginui.jpg" alt="로그인Ui">
+        <span class="black-han-sans-regular scroll-spy">JavaScript를 이용한 로그인 Ui 만들기</span>
+        <img class="scroll-spy" src="images/loginuicreate.jpg" alt="로그인uicode">
+      </div>
+    </div>
+  </section>
+  <!-- CONTACT -->
+  <section id="contact" class="contact font-en scroll-spy">
+    <div class="inner">
+      <h2 class="title">CONTACT</h2>
+      <div class="contact__info">
+        <ul>
+          <li>
+            <a href="https://github.com/wnstn6500" target="_blank">github.com/wnstn6500</a>
+          </li>
+          <li>010-6493-9906</li>
+          <li>wnstn6500@naver.com</li>
+        </ul>
+      </div>
+      <div class="contact__sns">
+        <ul>
+          <li>
+            <a href="#인스타그램주소" target="_blank">
+              <img src="images/icon_insta.png" alt="인스타그램">
+            </a>
+          </li>
+          <li>
+            <a href="https://github.com/wnstn6500" target="_blank">
+              <img src="images/github-removebg-preview.png" alt="깃허브">
+            </a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </section>
+  
+  <footer>
+    <div class="inner">
+      <p class="copylight">
+        &copy; <span class="this-year"></span>
+        <span class="font-en">Beak Jun su. All Rights Reserved.</span>       
+      </p>
+    </div>
+  </footer>
 </div>
 </body>
 </html>
