3주차 목요일 오전수업

--- a/08-1_portfolio-site/index.html
+++ b/08-1_portfolio-site/index.html
@@ -34,7 +34,7 @@
   <header>
     <div class="inner">
       <!-- 로고 -->
-      <a href="images/apple-touch-icon (1).png" class="logo">
+      <a href="http://127.0.0.1:5500/08-1_portfolio-site/index.html" class="logo">
         <img src="images/apple-touch-icon (1).png" alt="">
       </a>
       <!-- 메뉴 -->
@@ -169,7 +169,7 @@
       <div class="contact__sns">
         <ul>
           <li>
-            <a href="#인스타그램주소" target="_blank">
+            <a href="https://www.instagram.com/" target="_blank">
               <img src="images/icon_insta.png" alt="인스타그램">
             </a>
           </li>
