--- a/08_portfolio-site/index.html
+++ b/08_portfolio-site/index.html
@@ -71,6 +71,11 @@
           </li>
         </ul>
       </nav>
+
+      <!-- 햄버거 버튼 -->
+      <a href="javascript:void(a)" class="btn-hamburger">
+        <span class="material-symbols-outlined">menu</span>
+      </a>
     </div>
   </header> 
 
