비디오 넣기전

--- a/08-1_portfolio-site/index.html
+++ b/08-1_portfolio-site/index.html
@@ -31,6 +31,7 @@
 
 </head>
 <body>
+  <div style="overflow-x: hidden;">
   <header>
     <div class="inner">
       <!-- 로고 -->
@@ -54,6 +55,10 @@
           </li>
         </ul>
       </nav>
+      <!-- 햄버거 버튼 -->
+      <a href="javascript:void(a)" class="btn-hamburger">
+        <span class="material-symbols-outlined">menu</span>
+      </a>
     </div>
     
   </header>
@@ -140,15 +145,17 @@
   <!-- PROJECT -->
   <section id="project" class="project">
     <div class="inner">
-      <h2 class="title black-han-sans-regular">PROJECT</h2>
+      <h2 class="title black-han-sans-regular">PROJECT
+      </h2>
+      <span class="black-han-sans-regular scroll-spy">css를 이용한 오버워치 캐릭터 선택창 만들기</span>
       <div class="overwatch">
         <img class="scroll-spy" src="images/overwatch.jpg" alt="오버워치">
-        <span class="black-han-sans-regular scroll-spy">css를 이용한 오버워치 캐릭터 선택창 만들기</span>
         <img class="scroll-spy" src="images/overwatchcss.jpg" alt="오버워치code">
       </div>
+      <span class="black-han-sans-regular scroll-spy">JavaScript를 이용한 로그인 Ui 만들기</span>
       <div class="login">
-        <img class="scroll-spy" src="images/loginui.jpg" alt="로그인Ui">
-        <span class="black-han-sans-regular scroll-spy">JavaScript를 이용한 로그인 Ui 만들기</span>
+        <img class="scroll-spy" src="images/loginui-removebg-preview.png" alt="로그인Ui">
+        <img class="scroll-spy" src="images/loginui2.jpg" alt="로그인Ui2">
         <img class="scroll-spy" src="images/loginuicreate.jpg" alt="로그인uicode">
       </div>
     </div>
@@ -191,6 +198,7 @@
       </p>
     </div>
   </footer>
+</div>
 </div>
 </body>
 </html>
