--- a/08_portfolio-site/index.html
+++ b/08_portfolio-site/index.html
@@ -45,6 +45,8 @@
   <!-- <span>헬로 월드!</span>
   <span class="font-en">Hello world!</span> -->
 
+  <div style="overflow-x: hidden;">
+
   <!-- HEADER -->
   <header id="header">
     <div class="inner">
@@ -363,5 +365,6 @@
       <span class="material-symbols-outlined">arrow_upward</span>
     </a>
   </div>
+</div>  
 </body>
 </html>
