3주차 목요일

--- a/08-1_portfolio-site/index.html
+++ b/08-1_portfolio-site/index.html
@@ -32,7 +32,7 @@
 </head>
 <body>
   <div style="overflow-x: hidden;">
-  <header>
+  <header id="header">
     <div class="inner">
       <!-- 로고 -->
       <a href="http://127.0.0.1:5500/08-1_portfolio-site/index.html" class="logo">
