3주차 금요일 오전수업

--- a/08_portfolio-site/index.html
+++ b/08_portfolio-site/index.html
@@ -3,6 +3,24 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  
+  <!-- 오픈 그래프(링크의 프리뷰) -->
+  <!-- 웹페이지가 소셜미디어(페이스북, 카톡 등)로 공유될 때 우선적으로 활용되는 정보 -->
+  <meta property="og:type" content="website" />
+  <meta property="og:site_name" content="Starbucks" />
+  <meta property="og:title" content="Starbucks Coffee Korea" />
+  <meta property="og:description" content="스타벅스는 세계에서 가장 큰 다국적 커피 전문점으로, 64개국에서 총 23,187개의 매점을 운영하고 있습니다." />
+  <meta property="og:image" content="./images/starbucks_seo.jpg" />
+  <meta property="og:url" content="https://starbucks.co.kr" />
+
+  <!-- 트위터 카드 -->
+  <!-- 웹페이지가 소셜미디어(트위터)로 공유될 때 우선적으로 활용되는 정보 -->
+  <meta property="twitter:card" content="summary" />
+  <meta property="twitter:site" content="Starbucks" />
+  <meta property="twitter:title" content="Starbucks Coffee Korea" />
+  <meta property="twitter:description" content="스타벅스는 세계에서 가장 큰 다국적 커피 전문점으로, 64개국에서 총 23,187개의 매점을 운영하고 있습니다." />
+  <meta property="twitter:image" content="./images/starbucks_seo.jpg" />
+  <meta property="twitter:url" content="https://starbucks.co.kr" />
   <title>백준수 포트폴리오</title>
 
   <!-- 파비콘(favicon.ico)은 프로젝트 폴더의 최상위 경로에 포함시키면 자동 적용 
@@ -133,7 +151,7 @@
       <div class="about__wrapper">
         <div class="about__img">
           <!-- 본인 프로필 이미지 넣기 -->
-          <img src="images/logo copy.png" alt="프로필">
+          <img src="images/66b3e291-6651-4c4d-8bf7-13ab5bb02602.png" alt="프로필">
         </div>
         <div class="about__text">
           <!-- 본인 슬로건, 이름(생년월일), 학력 또는 교육 사항 등 작성 -->
@@ -282,7 +300,7 @@
               </ul>
               <div class="btn-group">
                 <a href="javascript:void(0)" class="btn btn-modal">README</a>
-                <a href="javascript:void(0)" class="btn btn--brown btn-modal-image"data-image-src="images/work_3.jpg">이미지</a>
+                <a href="javascript:void(0)" class="btn btn--brown btn-modal-image" data-image-src="images/work_3.jpg">이미지</a>
               </div>
             </div>
       </div>
