개인프로젝트완성

--- a/08_portfolio-site/index.html
+++ b/08_portfolio-site/index.html
@@ -4,8 +4,17 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   
-  <!-- 오픈 그래프(링크의 프리뷰) -->
-  <!-- 웹페이지가 소셜미디어(페이스북, 카톡 등)로 공유될 때 우선적으로 활용되는 정보 -->
+  <!-- 오픈 그래프와 트위터 카드 설정(링크의 프리뷰) -->
+  <!-- 오픈 그래프 -->
+  <!-- 웹페이지가 소셜미디어(카카오톡, 슬랙, 페이스북 등)로 공유될 때 우선적으로 활용되는 정보 -->
+  <!-- 
+    type: 사이트 타입(website로 고정하면 됨)
+    site_name: 웹사이트 이름, 브랜드 네임을 쓰면 좋음(ex. Goni's Portfolio, Goni.dev, MyPortfolio)
+    title: 현재 페이지의 제목
+    description: 간단한 소개(검색, 공유 시 미리보기에서 사용)
+    image: 썸네일 이미지(가장 중요함!), 절대 경로로 작성하는 것을 권장(https://부터 시작), 권장 크기(1200x630px 정도)
+    url: 현재 사이트의 대표 URL
+  -->
   <meta property="og:type" content="website" />
   <meta property="og:site_name" content="Starbucks" />
   <meta property="og:title" content="Starbucks Coffee Korea" />
