4주차 월요일

--- a/08-1_porsenal_portfolio-site/index.html
+++ b/08-1_porsenal_portfolio-site/index.html
@@ -65,7 +65,7 @@
   <!-- 본문 -->
   <section class="visual">
     <div class="inner">
-      <video src="videos/9584-220312371.mp4" muted autoplay loop></video>
+      <video src="videos/9584-220312371.mp4" muted autoplay loop type="video/mp4"></video>
       <h1 class="black-han-sans-regular animate__backInLeft animate__fast animate__animated">
         안녕하세요
       </h1>
@@ -76,7 +76,7 @@
   <!-- ABOUT -->
   <section id="about" class="about">
     <div class="inner">
-      <video src="videos/wave.mp4" muted autoplay loop></video>
+      <!-- <video src="videos/wave.mp4" muted autoplay loop type="video/mp4"></video> -->
       <h2 class="title black-han-sans-regular">ABOUT</h2>
       <div class="about__wrapper">
         <div class="about__img">
