--- a/9_JavaScript/homework/2_hw_operator.html
+++ b/9_JavaScript/homework/2_hw_operator.html
@@ -5,6 +5,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
   <style>
+    body{
+      position: relative;
+      
+    }
     .bead{
       background-color: aqua;
       border-radius: 50%;
@@ -26,15 +30,65 @@
   <div class="beadbox">
   </div>
 
+
+  <h2>계산기</h2>
+  <label for="firstNum">첫번째 값:</label>
+  <input id="firstNum" type="text">
+  <br>
+  <label for="secondNum">두번째 값:</label>
+  <input id="secondNum" type="text">
+  <br>
+  <button class="plusCal">+</button>
+  <button class="minus">-</button>
+  <button class="multiple">x</button>
+  <button class="division">/</button>
+  <button class="rest">%</button>
+  <br>
+  <hr>
+  <span>결과값:</span>
+  <span class="result"></span>
+  <br>
+  <hr>
+  
   <script>
     const plusBead = document.querySelector('.plus');
     const check = document.querySelector('.check');
     const reset = document.querySelector('.reset');
     const boxEl = document.querySelector('.beadbox');
 
+    let num = 0;
+
     plusBead.addEventListener('click', function () {
-      boxEl.innerHTML = '<div class="bead"></div>'
+      console.log(boxEl.innerHTML);
+      num ++;
+      boxEl.innerHTML = boxEl.innerHTML + '<div class="bead"></div>';
     })
+    check.addEventListener('click', function () {
+      if (num % 2 === 0) {
+        alert('짝수입니다.')
+      } else{
+        alert('홀수입니다.')
+      }
+    })
+    reset.addEventListener('click', function () {
+      boxEl.innerHTML = '';
+    });
+
+    // 계산기 문제
+    const firstNumEl = document.getElementById('firstNum');
+    const secondNumEl = document.getElementById('secondNum');
+
+    const plusEl = document.querySelector('.plusCal');
+    const minus = document.querySelector('.minus');
+    const multiple = document.querySelector('.multiple');
+    const division = document.querySelector('.division');
+    const rest = document.querySelector('.rest');
+    const resultEl = document.querySelector('.result');
+
+
+    plusEl.addEventListener('click', function () {
+      resultEl.innerHTML = Number(firstNumEl.value) + Number(secondNumEl.value);
+    });
 
 
   </script>
