5월7일차 수업

--- a/04_HTML/7_input.html
+++ b/04_HTML/7_input.html
@@ -159,6 +159,7 @@
     <label for="volume">음량(0~50):</label>
     <input type="range" id="volume" min="0" max="50" step="2"> 
     <span id="volumeValue"></span>
+    <!-- range 크기값 실시간 변경 표시 /-->
 
     <script>
       const vol = document.getElementById('volume');
